Verilen bilgilere göre (migrationdan önce) database tablo şekillendirilmesi

--- a/PhoneBookAPI.Persistence/PhoneBookAPI.Persistence.csproj
+++ b/PhoneBookAPI.Persistence/PhoneBookAPI.Persistence.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PhoneBookAPI.Application\PhoneBookAPI.Application.csproj" />
+  </ItemGroup>
+
 </Project>
