--- a/PhoneBookAPI.Application/PhoneBookAPI.Application.csproj
+++ b/PhoneBookAPI.Application/PhoneBookAPI.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PhoneBookAPI.Domain\PhoneBookAPI.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
